--- a/Project2/View/PortfolioCollectionViewCell.xib
+++ b/Project2/View/PortfolioCollectionViewCell.xib
@@ -22,6 +22,18 @@
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Hzq-Ex-zz7">
                         <rect key="frame" x="0.0" y="0.0" width="172" height="210"/>
                     </imageView>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6iR-Rd-W0Z">
+                        <rect key="frame" x="137" y="10" width="25" height="25"/>
+                        <color key="backgroundColor" white="0.33333333329999998" alpha="0.73825449486301364" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="25" id="4Vn-iV-uBu"/>
+                            <constraint firstAttribute="width" constant="25" id="wA8-bQ-3eK"/>
+                        </constraints>
+                        <state key="normal" image="noun_more_605070-2"/>
+                        <connections>
+                            <action selector="showMoreBtnTapped:" destination="gTV-IL-0wX" eventType="touchUpInside" id="SDE-m0-imf"/>
+                        </connections>
+                    </button>
                 </subviews>
             </view>
             <constraints>
@@ -29,13 +41,19 @@
                 <constraint firstItem="Hzq-Ex-zz7" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="GaX-sG-8Nj"/>
                 <constraint firstAttribute="bottom" secondItem="Hzq-Ex-zz7" secondAttribute="bottom" id="Tib-q2-Ut0"/>
                 <constraint firstItem="Hzq-Ex-zz7" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="Ylk-3B-vTT"/>
+                <constraint firstItem="6iR-Rd-W0Z" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="10" id="qmx-3d-m4m"/>
+                <constraint firstAttribute="trailing" secondItem="6iR-Rd-W0Z" secondAttribute="trailing" constant="10" id="r4S-Oh-qdY"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <size key="customSize" width="172" height="210"/>
             <connections>
                 <outlet property="designView" destination="Hzq-Ex-zz7" id="xzE-yh-mn8"/>
+                <outlet property="showMoreButton" destination="6iR-Rd-W0Z" id="Ahw-nm-Djp"/>
             </connections>
             <point key="canvasLocation" x="235.19999999999999" y="215.8920539730135"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <image name="noun_more_605070-2" width="42.5" height="42.5"/>
+    </resources>
 </document>
