--- a/Project2/View/PortfolioCollectionViewCell.xib
+++ b/Project2/View/PortfolioCollectionViewCell.xib
@@ -42,8 +42,8 @@
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="eft-21-rFs"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
+                        <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="17"/>
+                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
