--- a/Project2/View/Storyboard/Base.lproj/Main.storyboard
+++ b/Project2/View/Storyboard/Base.lproj/Main.storyboard
@@ -557,10 +557,11 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="saX-TL-hqu">
-                                        <rect key="frame" x="20" y="9.5" width="100" height="30"/>
+                                        <rect key="frame" x="20" y="7" width="100" height="35"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="100" id="3WJ-dr-Mfh"/>
                                         </constraints>
+                                        <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="17"/>
                                         <state key="normal" title="Camera Roll">
                                             <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                         </state>
@@ -572,11 +573,12 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gDk-lN-Nys">
-                                        <rect key="frame" x="240" y="9.5" width="60" height="30"/>
+                                        <rect key="frame" x="240" y="7" width="60" height="35"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="60" id="JHC-0h-6vu"/>
                                         </constraints>
+                                        <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="17"/>
                                         <color key="tintColor" red="0.91764705879999997" green="0.71649145989999996" blue="0.120028148" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <state key="normal" title="Colors">
                                             <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -589,10 +591,11 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" springLoaded="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qTQ-dc-u20">
-                                        <rect key="frame" x="150" y="9.5" width="60" height="30"/>
+                                        <rect key="frame" x="150" y="7" width="60" height="35"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="60" id="FXF-aI-6k8"/>
                                         </constraints>
+                                        <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="17"/>
                                         <color key="tintColor" red="0.91764705879999997" green="0.71649145989999996" blue="0.120028148" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <state key="normal" title="Filter">
                                             <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -673,7 +676,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hru-rT-4va" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1810" y="9"/>
+            <point key="canvasLocation" x="1808.8" y="8.995502248875562"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="Eyq-Ma-FeX">
